# Epson-Waste-Reset

./: AI_DISCLOSURE.md  CMakeLists.txt  README.md  lan_database.json
cli/: main.cpp
gui/: ewr-gui.manifest  ewr-gui.rc  main_gui.cpp  nodefaultmanifest.specs
include/ewr/: maintenance.h  snmp.h  usb.h
scripts/: extract_lan_db.py
src/: maintenance.cpp  snmp_windows.cpp  usb_linux.cpp  usb_windows.cpp
